--- a/02_assignment.org
+++ b/02_assignment.org
@@ -2,29 +2,55 @@
 * Button LED Assignments
 ** Start by building the circuits.  This one will follow diagram in section 
    2.6 of the gpiozero.readthedocs.io basic recipes. The only difference will
-   be you should connect via the red GPIO extension board- not directly into the 
-   Pi.
+   be that you should connect via the red GPIO extension board- not directly into  
+   the pins on the Pi.
 
-** Next try running the 02_buttonLed_0.py, 02_buttonLed_1.py and 
-   02_buttonLed_2.py programs from shell.
+** Next try running the 02_buttonLed_0.py script.
+   Read the commands in the script carefully to try to understand what the 
+   script is doing.  
 
-** Integrate questions that build with each of the scripts.....
-   from shell.  Read through each program, and recall that only the lines 
-   that DO NOT start with '#' are python commands/code.  Everything else 
-   is notes explaining what is going on.
+*** Question/Excersise (1)
+    Change the line 'myLed = LED(17)' so that it reads as 
+    'myRedLed = LED(17)'.  Save the script with this change.  Now,
+    does the program still work?  If not, what do you have to do make it work
+    with that new name for the LED?
 
-** Questions
-*** (1) In 01_blinkingLed_0.py, we had the command myLed.blink(2) or similar
-    with some other number in place of 2.  What exactly does the 2 do? Does 
-    it control how long the LED is on? Or off? Or both?  Experiment as needed 
-    to find out.
-*** (2) When building LED circuits on the breadboard without Python, the only 
-    way we could make an LED blink was by wiring in a button and pressing it 
-    on/off to close the circuit.  Describe what you think myLed.blink(2) is 
-    "doing" to make the light go on and off.
-*** (3) Examine the wiring setup on your breadboard.  Recall when building 
-    circuits we would connect power (3V) to the power rail, run that through the 
-    resistor and LED, and then return the current to the negative power rail and 
-    connect that to ground. What is different in this case? Where is the ground? 
-
+*** Question/Excersise (2)
+    Next try changing the line 'myButton.when_pressed = myLed.on' so that it reads
+    myButton.when_pressed = myLed.LightUp'.  Save that change and then try running 
+    the script.  Now, does the program still work?  If not, are there any other 
+    changes that you could make to the script to make it run correctly? (Hint: it 
+    might not be possible).
     
+    Part B:  Any idea why the script is not working?  After all turning an LED on 
+    is kind of the same thing as having it 'LightUp'?
+
+** Next try running the 2_buttonLed_1.py script. 
+   After you have it working, read through the script and try to understand what 
+   is happening.
+
+*** Question/Excersise (3)
+    Describe what is different in this script compared to the first buttonLed script?
+
+
+** That is it for day 1 of the button/LED.  The stuff below is for next time. 
+
+** Next up, open and read the  02_buttonLed_2.py script. 
+
+*** Question/Excersise (4)
+    What is different about this script compared to the previous 2 
+    button / led scripts?
+
+** Now, run the script and test the 
+
+*** Question/Excersise (5)
+    Does is work as expected?  What does the button do?
+
+** Lastly, at the 'print("...")' lines within the script, change
+   the text within the quotations marks from "Button has been..." to something 
+   silly.  Then save the script, run it, and make sure than it works as expected.
+   If the LED lights up when the button is pressed and it displays your silly 
+   text at the shell, then you are done for today.  
+     
+     
+
